# cppDataParser

./: .gitignore  CMakeLists.txt  README.md
parserInterface/: CMakeLists.txt  parser.cpp  parser.h
parserTest/: CMakeLists.txt  parserApiTest.cpp
